feat: created banner and made it responsive

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <img class= "logo-m3" src="./assets/images/Logo-M3Academy 1.png" alt="Logo M3" />
             </a>
         </header>
+
+        <section>
+            <img class= "banner-1-desktop" src="./assets/images/banner-1-desktop.png" alt="laptop com codigos na tela" />
+            <img class= "banner-1-mobile" src="./assets/images/banner-1-mobile.png" alt="laptop com codigos na tela">
+        </section>
         
     </body>
 </html>
