--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
             <img class= "banner-1-desktop" src="./assets/images/banner-1-desktop.png" alt="laptop com codigos na tela" />
             <img class= "banner-1-mobile" src="./assets/images/banner-1-mobile.png" alt="laptop com codigos na tela">
         </section>
+        <section class="first-section">
+            <div class="text-1">
+                <h2>Lorem ipsum</h2>
+                <h1>dolor sit amet</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. Curabitur ut tortor sed lacus egestas vulputate vel sit amet velit. Nulla suscipit magna dui. 
+                </p>
+            </div>
+        </section>
         
     </body>
 </html>
