fix: made responsive text

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
                 </p>
             </div>
         </section>
+        <section class="image-section">
+            <img class="image-computer" src="./assets/images/computadores e setas.svg" alt="computadores conectados">
+        </section>
+        <section>
+            <div>
+                <img src="./assets/images/shop 1.svg" alt="loja" />
+            </div>
+            <div>
+                <img src="./assets/images/shopping-bag (1) 1.svg" alt="sacola">
+            </div>
+            <div>
+                <img src="./assets/images/coin 1.svg" alt="mão com moeda">
+            </div>
+        </section>
         
     </body>
 </html>
