feat: created image cards and made responsive

--- a/index.html
+++ b/index.html
@@ -31,15 +31,27 @@
         <section class="image-section">
             <img class="image-computer" src="./assets/images/computadores e setas.svg" alt="computadores conectados">
         </section>
-        <section>
-            <div>
-                <img src="./assets/images/shop 1.svg" alt="loja" />
+        <section class="section-cards">
+            <div class="image-card">
+                <img class="image-card-image" src="./assets/images/shop 1.svg" alt="loja" />
+
+                <p class="image-card-paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. 
+                </p>
             </div>
-            <div>
-                <img src="./assets/images/shopping-bag (1) 1.svg" alt="sacola">
+            <div class="image-card">
+                <img class="image-card-image" src="./assets/images/shopping-bag (1) 1.svg" alt="sacola" />
+
+                <p class="image-card-paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. 
+                </p>
             </div>
-            <div>
-                <img src="./assets/images/coin 1.svg" alt="mão com moeda">
+            <div class="image-card">
+                <img class="image-card-image" src="./assets/images/coin 1.svg" alt="mão com moeda" />
+
+                <p class="image-card-paragraph">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. 
+                </p>
             </div>
         </section>
         
