fix: fix responsive mobile and desktop middle card and created a second image cards

--- a/index.html
+++ b/index.html
@@ -61,5 +61,35 @@
             </div>
                 <img class="midle-card" src="./assets/images/midel card 3.png" alt="laptop 3" />
         </section>
+        <section class="section-cards-second">
+            <div class="image-card-second">
+                <img class="image-card-image-second" src="./assets/images/money.svg" alt="loja" />
+
+                <p class="image-card-paragraph-second">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. 
+                </p>
+            </div>
+            <div class="image-card-second">
+                <img class="image-card-image-second" src="./assets/images/coin 1.svg" alt="sacola" />
+
+                <p class="image-card-paragraph-second">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. 
+                </p>
+            </div>
+            <div class="image-card-second">
+                <img class="image-card-image-second" src="./assets/images/laptop 1.svg" alt="mão com moeda" />
+
+                <p class="image-card-paragraph-second">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. 
+                </p>
+            </div>
+            <div class="image-card-second">
+                <img class="image-card-image-second" src="./assets/images/smartphone.svg" alt="mão com moeda" />
+
+                <p class="image-card-paragraph-second">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. 
+                </p>
+            </div>
+        </section>
     </body>
 </html>
