feat: created second text

--- a/index.html
+++ b/index.html
@@ -91,5 +91,15 @@
                 </p>
             </div>
         </section>
+        <section class="text-2-section">
+            <div class="text-2">
+                <h2>Lorem ipsum dolor sit amet</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vulputate sapien non libero faucibus interdum. In eget tincidunt ipsum. 
+                    Quisque  a tellus at lectus blandit tempor. Ut tristique auctor mi eget hendrerit. Curabitur venenatis felis vitae sagittis venenatis.
+                    Donec finibus turpis vitae lectus interdum rutrum vitae sed augue.
+                </p>
+            </div>
+        </section>
     </body>
 </html>
