feat: created and made position on desktop

--- a/index.html
+++ b/index.html
@@ -101,5 +101,10 @@
                 </p>
             </div>
         </section>
+        <section class="footer-image-section">
+            <div class="footer-image-div">
+                <img class="footer-image" src="./assets/images/glass footer.png" alt="glass">
+            </div>
+        </section>
     </body>
 </html>
