--- a/index.html
+++ b/index.html
@@ -106,5 +106,24 @@
                 <img class="footer-image" src="./assets/images/glass footer.png" alt="glass">
             </div>
         </section>
+        <footer class="footer-page">
+            <div class="footer-div">
+                <a href="https://www.instagram.com/m3.ecommerce/" target="_blank">
+                    <img src="./assets/images/instagram-icon.svg" alt="icon-instagram">
+                </a>
+
+                <a href="https://pt-br.facebook.com/digitalm3/" target="_blank">
+                    <img src="./assets/images/facebook-icon.svg" alt="icon-facebook">
+                </a>
+
+                <a href="https://www.youtube.com/channel/UCW4o86gZG_ceA8CmHltXeXA" target="_blank">
+                    <img src="./assets/images/youtube-icon.svg" alt="icon-youtube">
+                </a>
+            </div>
+
+            <p class="footer-paragraph">
+                Copyright © 2020 - Loja  Comércio Eletrônico CNPJ: 000.000.000/0001-00
+            </p>
+        </footer>
     </body>
 </html>
