fix: fix all responsive mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;900&display=swap" rel="stylesheet">
         
         <title>M3academy</title>
     </head>
@@ -90,6 +93,9 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras euismod enim non dui fringilla interdum. 
                 </p>
             </div>
+        </section>
+        <section class="section-glass-mobile">
+                <img src="./assets/images/glass-mobile.png" alt="glasses on laptop">
         </section>
         <section class="text-2-section">
             <div class="text-2">
